[gd_scene load_steps=58 format=3 uid="uid://bmgnumcjfn20k"]

[ext_resource type="PackedScene" uid="uid://dao4cui0qcwt8" path="res://common/ui/bg.tscn" id="1_efps0"]
[ext_resource type="Script" uid="uid://cnxt5jviwmr45" path="res://shikoba/upgrades.gd" id="2_0vcly"]
[ext_resource type="Shader" uid="uid://d1sjv3im4myv3" path="res://common/shaders/colour_replacement.gdshader" id="2_eount"]
[ext_resource type="Texture2D" uid="uid://bgh653gn0v0ky" path="res://shikoba/assets/powerup_tab.png" id="3_0vcly"]
[ext_resource type="Texture2D" uid="uid://dslfb1hbeom1w" path="res://shikoba/assets/item_panel.png" id="3_8xkgo"]
[ext_resource type="Shader" uid="uid://bqb75j0d5opfs" path="res://common/shaders/white_outline.gdshader" id="3_hvxd5"]
[ext_resource type="PackedScene" uid="uid://cl5ov5nvhs82d" path="res://common/ui/close_tab/close_tab.tscn" id="5_8dij4"]
[ext_resource type="Texture2D" uid="uid://bd8tho8csinqp" path="res://shikoba/assets/big powerups/speed_boost.png" id="5_vlv2p"]
[ext_resource type="Texture2D" uid="uid://b8l3bj0imkspl" path="res://shikoba/assets/upgrade_button.png" id="6_7sp21"]
[ext_resource type="PackedScene" uid="uid://bhkbm3mlr5yiu" path="res://common/ui/upgrades/stat display/stat_display.tscn" id="7_g73mp"]
[ext_resource type="PackedScene" uid="uid://kwksnsvk5s12" path="res://common/ui/upgrades/upgrade button/upgrade_button.tscn" id="7_m7b7o"]
[ext_resource type="Texture2D" uid="uid://bl52iqn1evwa" path="res://shikoba/assets/upgrade_button_down.png" id="8_g73mp"]
[ext_resource type="Texture2D" uid="uid://cekdnl7mg2n3q" path="res://common/minerals/tugtupite.png" id="10_s7rxc"]
[ext_resource type="Texture2D" uid="uid://drxh1f8t10m6b" path="res://shikoba/assets/powerup_panel.png" id="12_0vcly"]
[ext_resource type="Texture2D" uid="uid://qhgni2cfpbn4" path="res://shikoba/assets/general/general_panel.png" id="12_pnywg"]
[ext_resource type="Texture2D" uid="uid://wfybn8db5g68" path="res://shikoba/assets/big_shikoba.png" id="13_58l61"]
[ext_resource type="Texture2D" uid="uid://br2sp336cugf0" path="res://shikoba/assets/general/general_tab.png" id="14_hvxd5"]
[ext_resource type="PackedScene" uid="uid://b02ya4qjvvv6d" path="res://common/ui/dialogue/speech_bubble.tscn" id="14_pnywg"]
[ext_resource type="Script" uid="uid://tciv72rns5sp" path="res://common/ui/dialogue/dialogue.gd" id="15_fow4l"]
[ext_resource type="Script" uid="uid://gp7ahdsq2b84" path="res://common/ui/dialogue/dialogue_option.gd" id="16_qb3uq"]
[ext_resource type="PackedScene" uid="uid://boextoi3git5n" path="res://common/ui/position_manager/position_manager.tscn" id="17_d2r1m"]
[ext_resource type="Script" uid="uid://b7stbnudt8tpk" path="res://common/ui/position_manager/detail_node.gd" id="18_0vcly"]
[ext_resource type="Texture2D" uid="uid://h7gm6pefewr3" path="res://shikoba/assets/general/powerup_spawn_rate.png" id="20_fow4l"]
[ext_resource type="Shader" uid="uid://bdsus7hm4q1wt" path="res://common/shaders/replacement_and_outline.gdshader" id="20_qb3uq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hvxd5"]
shader = ExtResource("3_hvxd5")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d2r1m"]
shader = ExtResource("20_qb3uq")
shader_parameter/original_colors = PackedColorArray(0.18039216, 0.13333334, 0.18431373, 1, 0.24313726, 0.20784314, 0.27450982, 1, 0.38431373, 0.33333334, 0.39607844, 1, 0.5882353, 0.42352942, 0.42352942, 1)
shader_parameter/replacement_colors = PackedColorArray(0.47843137, 0.1882353, 0.27058825, 1, 0.8039216, 0.40784314, 0.23921569, 1, 0.9019608, 0.5647059, 0.30588236, 1, 0.9843137, 0.7254902, 0.32941177, 1)
shader_parameter/threshold = 0.01
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0000000475
shader_parameter/outline_pattern = 0
shader_parameter/outline_inside = false
shader_parameter/add_margins = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ucq2k"]
shader = ExtResource("3_hvxd5")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlv2p"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.18039216, 0.13333334, 0.18431373, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 12
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8xkgo"]
bg_color = Color(0.78039217, 0.8627451, 0.8156863, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.18039216, 0.13333334, 0.18431373, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 12
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8dij4"]
bg_color = Color(0.60784316, 0.67058825, 0.69803923, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.18039216, 0.13333334, 0.18431373, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 12
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7sp21"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="Theme" id="Theme_7sp21"]
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_vlv2p")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_8xkgo")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_8dij4")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_7sp21")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g73mp"]
shader = ExtResource("2_eount")
shader_parameter/original_colors = PackedColorArray(0.18039216, 0.13333334, 0.18431373, 1, 0.24313726, 0.20784314, 0.27450982, 1, 0.38431373, 0.33333334, 0.39607844, 1, 0.5882353, 0.42352942, 0.42352942, 1)
shader_parameter/replacement_colors = PackedColorArray(0.08627451, 0.3529412, 0.29803923, 1, 0.13725491, 0.5647059, 0.3882353, 1, 0.11764706, 0.7372549, 0.4509804, 1, 0.5686275, 0.85882354, 0.4117647, 1)
shader_parameter/threshold = 0.01

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0vcly"]
shader = ExtResource("20_qb3uq")
shader_parameter/original_colors = PackedColorArray(0.18039216, 0.13333334, 0.18431373, 1, 0.24313726, 0.20784314, 0.27450982, 1, 0.38431373, 0.33333334, 0.39607844, 1, 0.5882353, 0.42352942, 0.42352942, 1)
shader_parameter/replacement_colors = PackedColorArray(0.08627451, 0.3529412, 0.29803923, 1, 0.13725491, 0.5647059, 0.3882353, 1, 0.11764706, 0.7372549, 0.4509804, 1, 0.5686275, 0.85882354, 0.4117647, 1)
shader_parameter/threshold = 0.01
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/outline_pattern = 0
shader_parameter/outline_inside = false
shader_parameter/add_margins = true

[sub_resource type="Resource" id="Resource_hvxd5"]
script = ExtResource("16_qb3uq")
player = "hello!"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_ucq2k"]
script = ExtResource("15_fow4l")
text = "..."
options = Array[ExtResource("16_qb3uq")]([SubResource("Resource_hvxd5")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_pq2mf"]
script = ExtResource("16_qb3uq")
player = "who are you?"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_4kwko"]
script = ExtResource("15_fow4l")
text = "hello"
options = Array[ExtResource("16_qb3uq")]([SubResource("Resource_pq2mf")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_yqhyl"]
script = ExtResource("15_fow4l")
text = "I am Shikoba"
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_oe8xc"]
script = ExtResource("15_fow4l")
text = "..."
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_ydb7a"]
script = ExtResource("15_fow4l")
text = "my people have lived here for thousands of years"
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_y42jb"]
script = ExtResource("15_fow4l")
text = "we've discovered a unique power source"
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_7pms4"]
script = ExtResource("15_fow4l")
text = "you are welcome"
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_w705x"]
script = ExtResource("16_qb3uq")
player = "thank you"
response = SubResource("Resource_7pms4")
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_ginil"]
script = ExtResource("15_fow4l")
text = "we would be willing to share"
options = Array[ExtResource("16_qb3uq")]([SubResource("Resource_w705x")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_lrksc"]
script = ExtResource("16_qb3uq")
player = "powerups like what?"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_l3jqr"]
script = ExtResource("15_fow4l")
text = "bubbles will spawn, pop them for brief powerups"
options = Array[ExtResource("16_qb3uq")]([SubResource("Resource_lrksc")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_86xxf"]
script = ExtResource("15_fow4l")
text = "travel faster, do more damage, or others you'll unlock later"
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_y7q78"]
script = ExtResource("15_fow4l")
text = "why question something you cannot change?"
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_031fm"]
script = ExtResource("16_qb3uq")
player = "why?"
response = SubResource("Resource_y7q78")
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_tc265"]
script = ExtResource("16_qb3uq")
player = "ok"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_237rn"]
script = ExtResource("15_fow4l")
text = "kruos has a very different atmosphere to dyrt. your fuel will not work here"
options = Array[ExtResource("16_qb3uq")]([SubResource("Resource_031fm"), SubResource("Resource_tc265")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_ppf6b"]
script = ExtResource("15_fow4l")
text = "this landscape can be perilous. watch for snowstorms"
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_r60jr"]
script = ExtResource("16_qb3uq")
player = "..."
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_dw4k6"]
script = ExtResource("16_qb3uq")
player = "thank you!"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_s0rpd"]
script = ExtResource("15_fow4l")
text = "..."
options = Array[ExtResource("16_qb3uq")]([SubResource("Resource_r60jr"), SubResource("Resource_dw4k6")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_yh7g6"]
script = ExtResource("18_0vcly")
node = NodePath("../Upgrades")
movements = Dictionary[NodePath, Vector2]({
NodePath("../CloseTab"): Vector2(291, -3)
})
metadata/_custom_type_script = "uid://b7stbnudt8tpk"

[node name="Shikoba" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" parent="." instance=ExtResource("1_efps0")]
layout_mode = 0
metadata/_edit_lock_ = true

[node name="Upgrades" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_0vcly")

[node name="General" type="Control" parent="Upgrades"]
anchors_preset = 0

[node name="Tab" type="TextureButton" parent="Upgrades/General"]
material = SubResource("ShaderMaterial_hvxd5")
layout_mode = 0
offset_left = 117.0
offset_top = 56.0
offset_right = 135.0
offset_bottom = 128.0
texture_normal = ExtResource("14_hvxd5")

[node name="Panel" type="TextureRect" parent="Upgrades/General"]
layout_mode = 0
offset_left = 130.0
offset_top = 14.0
offset_right = 294.0
offset_bottom = 174.0
mouse_filter = 2
texture = ExtResource("12_pnywg")

[node name="Upgrades" type="VBoxContainer" parent="Upgrades/General"]
layout_mode = 0
offset_left = 189.0
offset_top = 19.0
offset_right = 289.0
offset_bottom = 60.0

[node name="Upgrade" type="HBoxContainer" parent="Upgrades/General/Upgrades"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
alignment = 1

[node name="StatDisplay" parent="Upgrades/General/Upgrades/Upgrade" node_paths=PackedStringArray("upgrade_button") instance=ExtResource("7_g73mp")]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
upgrade_button = NodePath("../UpgradeButton")
base_off_hover_location = Vector2(0, 9)
base_on_hover_location = Vector2(0, 0)
upgrade_location = Vector2(-10, 0)
texture = ExtResource("20_fow4l")
font_colour = Color(0.47843137, 0.1882353, 0.27058825, 1)
outline_colour = Color(0.9019608, 0.5647059, 0.30588236, 1)
upgrade_font_colour = Color(0.8039216, 0.40784314, 0.23921569, 1)
upgrade_outline_colour = Color(0.9019608, 0.5647059, 0.30588236, 1)
upgrade_arrow_colour = Color(0.8039216, 0.40784314, 0.23921569, 1)

[node name="UpgradeButton" parent="Upgrades/General/Upgrades/Upgrade" instance=ExtResource("7_m7b7o")]
material = SubResource("ShaderMaterial_d2r1m")
layout_mode = 2
texture_normal = ExtResource("6_7sp21")
texture_pressed = ExtResource("8_g73mp")
stretch_mode = 5
stat_name = "fuel_capacity"
drop_height = 3
text_colour = Color(0.47843137, 0.1882353, 0.27058825, 1)
bg_colour = Color(0.9019608, 0.5647059, 0.30588236, 1)
text_offset = Vector2(-2, 14)
mineral_enabled = ExtResource("10_s7rxc")
show_upgrade_name = false

[node name="Powerups" type="Control" parent="Upgrades"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="TextureRect" parent="Upgrades/Powerups"]
layout_mode = 0
offset_left = 130.0
offset_top = 14.0
offset_right = 294.0
offset_bottom = 174.0
mouse_filter = 2
texture = ExtResource("12_0vcly")
stretch_mode = 5

[node name="Tab" type="TextureButton" parent="Upgrades/Powerups"]
material = SubResource("ShaderMaterial_ucq2k")
layout_mode = 0
offset_left = 117.0
offset_top = 14.0
offset_right = 133.0
offset_bottom = 80.0
texture_normal = ExtResource("3_0vcly")
stretch_mode = 4

[node name="PowerupUpgrades" type="ScrollContainer" parent="Upgrades/Powerups"]
layout_mode = 0
offset_left = 137.0
offset_top = 21.0
offset_right = 288.0
offset_bottom = 166.0
theme = SubResource("Theme_7sp21")
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="ItemUpgrades" type="VBoxContainer" parent="Upgrades/Powerups/PowerupUpgrades"]
clip_contents = true
layout_mode = 2

[node name="DemoPanel" type="TextureRect" parent="Upgrades/Powerups/PowerupUpgrades/ItemUpgrades"]
material = SubResource("ShaderMaterial_g73mp")
layout_mode = 2
texture = ExtResource("3_8xkgo")
stretch_mode = 3

[node name="StatDisplay" parent="Upgrades/Powerups/PowerupUpgrades/ItemUpgrades/DemoPanel" node_paths=PackedStringArray("upgrade_button") instance=ExtResource("7_g73mp")]
layout_mode = 0
offset_left = 65.0
offset_top = 4.0
offset_right = 65.0
offset_bottom = 4.0
upgrade_button = NodePath("../UpgradeButton")
base_off_hover_location = Vector2(-45, 28)
base_on_hover_location = Vector2(-45, 28)
upgrade_location = Vector2(0, 6)
texture = ExtResource("5_vlv2p")
font_colour = Color(0.08627451, 0.3529412, 0.29803923, 1)
outline_colour = Color(0.13725491, 0.5647059, 0.3882353, 1)
upgrade_font_colour = Color(0.5686275, 0.85882354, 0.4117647, 1)
upgrade_outline_colour = Color(0.13725491, 0.5647059, 0.3882353, 1)
upgrade_arrow_colour = Color(0.5686275, 0.85882354, 0.4117647, 1)

[node name="UpgradeButton" parent="Upgrades/Powerups/PowerupUpgrades/ItemUpgrades/DemoPanel" instance=ExtResource("7_m7b7o")]
material = SubResource("ShaderMaterial_0vcly")
layout_mode = 0
offset_left = 70.0
offset_top = 5.0
offset_right = 136.0
offset_bottom = 31.0
texture_normal = ExtResource("6_7sp21")
texture_pressed = ExtResource("8_g73mp")
stat_name = "speed_boost"
drop_height = 3
text_colour = Color(0.08627451, 0.3529412, 0.29803923, 1)
bg_colour = Color(0.11764706, 0.7372549, 0.4509804, 1)
text_offset = Vector2(-3, 14)
mineral_enabled = ExtResource("10_s7rxc")
show_upgrade_name = false

[node name="CloseTab" parent="." instance=ExtResource("5_8dij4")]
z_index = 0
layout_mode = 0
offset_left = 0.0
offset_top = -1.0
offset_right = 32.0
offset_bottom = 31.0

[node name="BigShikoba" type="Sprite2D" parent="."]
position = Vector2(46, 121)
texture = ExtResource("13_58l61")

[node name="SpeechBubble" parent="." instance=ExtResource("14_pnywg")]
visible = false
position = Vector2(202, 41)
text_lines = Array[ExtResource("15_fow4l")]([SubResource("Resource_ucq2k"), SubResource("Resource_4kwko"), SubResource("Resource_yqhyl"), SubResource("Resource_oe8xc"), SubResource("Resource_ydb7a"), SubResource("Resource_y42jb"), SubResource("Resource_ginil"), SubResource("Resource_l3jqr"), SubResource("Resource_86xxf"), SubResource("Resource_237rn"), SubResource("Resource_ppf6b"), SubResource("Resource_s0rpd")])
flipped = true

[node name="PositionManager" parent="." node_paths=PackedStringArray("speech_bubble") instance=ExtResource("17_d2r1m")]
details = Array[ExtResource("18_0vcly")]([SubResource("Resource_yh7g6")])
listening_state = 10
speech_bubble = NodePath("../SpeechBubble")

[connection signal="mouse_entered" from="Upgrades/General/Tab" to="Upgrades" method="on_hover" binds= ["general"]]
[connection signal="mouse_exited" from="Upgrades/General/Tab" to="Upgrades" method="off_hover" binds= ["general"]]
[connection signal="pressed" from="Upgrades/General/Tab" to="Upgrades" method="change_focus" binds= ["general"]]
[connection signal="mouse_entered" from="Upgrades/Powerups/Tab" to="Upgrades" method="on_hover" binds= ["items"]]
[connection signal="mouse_exited" from="Upgrades/Powerups/Tab" to="Upgrades" method="off_hover" binds= ["items"]]
[connection signal="pressed" from="Upgrades/Powerups/Tab" to="Upgrades" method="change_focus" binds= ["items"]]
